--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="output-onlinepngtools.png" alt="" height="600vh" width="900vw">
             <div class="landingpage-msg">
                 <p>Sell your <span>waste</span> and make Earth <span> green </span>
-                    with EcoAlliance</p>
+                    with EcoInnovators</p>
                     <button>Log in</button>
                     <button>sign in</button>
             </div>
