--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
             <a href="#" id="home">Home</a>
             <a href="#" id="about-us">About us</a>
             <a href="#">Services</a>
+            <a href="track.html">Track</a>
+            <a href="carbon.html">Carbon Footprint</a>
             <a href="#">Contact us</a>
-            <i class="fa-solid fa-user"></i></div>
+            <!-- <i class="fa-solid fa-bars" class="mobile-view"></i> -->
+            <i class="fa-solid fa-user" ></i></div>
         </nav>
         <div class="landingpage-part1">
-            <img src="output-onlinepngtools.png" alt="" height="600vh" width="900vw">
+            <img src="output-onlinepngtools.png" alt="" >
             <div class="landingpage-msg">
                 <p>Sell your <span>waste</span> and make Earth <span> green </span>
                     with EcoInnovators</p>
-                    <button>Log in</button>
+                    <button id="login-button">Log in</button>
                     <button>sign in</button>
             </div>
         </div>
@@ -258,10 +261,41 @@
             <h4>Developed by Raivee Chakraborty</h4>
         </div>
     </footer>
-    
-
+     <!-- Chatbot Section -->
+     <div id="chatbot">
+        <div id="chatbot-header">
+            <span>EcoBot</span>
+            <i class="fa-solid fa-times" id="chatbot-close"></i>
+        </div>
+        <div id="chatbot-body">
+            <div id="chatbot-messages"></div>
+            <div id="chatbot-input">
+                <input type="text" id="chatbot-user-input" placeholder="Type your message...">
+                <button id="chatbot-send"><i class="fa-solid fa-paper-plane"></i></button>
+            </div>
+        </div>
+    </div>
+    <button id="chatbot-toggle"><i class="fa-solid fa-comment-dots"></i></button>
+    <!-- login form -->
+    <div id="login-container" style="display: none;">
+        <div id="login-form">
+            <h2>Login</h2>
+            <form id="login">
+                <div class="input-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit" id="login-submit">Login</button>
+            </form>
+        </div>
+    </div>
 
     
    <script src="script.js"></script>   
+   <script src="chatbot.js"></script>
 </body>
 </html>
